fix image gap on pages

--- a/assets/text-page.css
+++ b/assets/text-page.css
@@ -95,8 +95,9 @@
     padding: 0 4rem;
     max-width: calc(35em + 4rem)
   }
-    .text-page__images--two-columns {
-      gap: 2rem;
+  .text-page__images {
+    gap: 2rem;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width:991px) {
